<resources>
    <string name="app_name">Magic App</string>
    <string name="list_of_tasks">List Of Home Task</string>
    <string name="fragment_one">Fragment One</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="fragment_three">Fragment Three</string>
    <!--//report-->
    <string name="report">Report</string>
    <string name="login_with_google">Login with Google</string>
    <string name="use_your_email">Use your email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_email">Sign up with your email address</string>
    <string name="pref_file_name">MyPref</string>
    <string name="pref_login_status">preference_login_status</string>
    <string name="pref_user_name">preference_user_name</string>

    <string name="media">Media</string>
    <string name="sharedPref">Shared Preference</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator">Calculator</string>
    <string name="quize">Quize</string>
    <string name="fragment">Fragment</string>

    <!--calculator string-->
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="square">x²</string>
    <string name="posneg">±</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="minus">-</string>
    <string name="backword"><![CDATA[<<]]></string>
    <string name="previous"><![CDATA[<|]]></string>
    <string name="play">||</string>
    <string name="forward"><![CDATA[|>]]></string>
    <string name="next"><![CDATA[>>]]></string>
    <string name="save">Save</string>

</resources>
