<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/image_view_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_large"
                android:src="@drawable/ic_user"
                android:tint="@color/colorPrimary"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_small">


            <ImageView
                android:id="@+id/image_view_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_large"
                android:src="@drawable/ic_lock"
                android:tint="@color/colorPrimary"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/light_green_solid_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginBottom="@dimen/margin_large"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            android:layout_margin="@dimen/margin_large"/>
        <TextView
            android:id="@+id/dont_have_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            android:layout_marginTop="@dimen/margin_large"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/margin_small"
            android:text="@string/sign_up_with_email"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_shape_border"
            android:text="@string/sign_up"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
</LinearLayout>
